fixed spacing issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-*, *:before, *after {
+*, *:before, *:after {
   box-sizing: border-box;
 }
 :root {
@@ -14,8 +14,8 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   display: grid;
   width: 616px;
-  grid-template-columns: 184px, 1fr;
-  grid-template-rows: 1px, 1fr;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 1px 1fr;
   margin-bottom: 24px;
 }
 .gradient-top-border {
@@ -29,12 +29,13 @@ body {
   grid-row: 2;
   display: flex;
   flex-direction: column;
+  padding: 8px;
+  width: 200px;
 }
 .user-info-ctn {
   display: grid;
-  grid-template-columns: 44px, 1fr;
-  grid-template-rows: 19px, 17px, 12px;
-  padding: 8px;
+  grid-template-columns: 44px 1fr;
+  grid-template-rows: 19px 17px 12px;
   color: #7b8ea3;
 }
 .review-entry:hover .user-info-ctn {
@@ -43,10 +44,9 @@ body {
 .avatar {
   grid-row: 1 / span 2;
   grid-column: 1;
-  margin-right: 8px;
   padding: 2px;
-  height: 32px;
-  width: 32px;
+  height: 36px;
+  width: 36px;
   background-image: linear-gradient(rgb(83, 164, 196) 5%, rgb(69, 128, 151) 95%);
   background-clip: border-box;
 }
@@ -59,7 +59,9 @@ body {
   grid-column: 2;
   font-size: 13px;
   font-weight: bold;
-  width: fit-content;
+  max-width: 140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .num-owned-games {
   grid-row: 2;
@@ -140,6 +142,7 @@ body {
   line-height: 17px;
   color: #acb2b8;
   overflow-wrap: break-word;
+  white-space: pre-line;
 }
 .review-content-end {
   height: 12px;
